<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".gameplay2">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#042B3E"
        android:backgroundTint="#43A047"
        android:backgroundTintMode="screen"
        tools:context=".MainActivity"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="-34dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="59dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="552dp"
            android:fontFamily="@font/atomic_age"
            android:text="@string/your_opponent_is"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.958" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="354dp"
            android:layout_height="54dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/atomic_age"
            android:text="@string/names"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/rock"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#06A8BC"
            android:contentDescription="@string/rock"
            android:onClick="rpsButton"
            android:scaleType="fitCenter"
            android:tag="1"
            app:layout_constraintEnd_toStartOf="@+id/paper"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:srcCompat="@drawable/rock" />

        <ImageButton
            android:id="@+id/paper"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="143dp"
            android:backgroundTint="#EC0D5F"
            android:contentDescription="@string/paper"
            android:onClick="rpsButton"
            android:scaleType="fitCenter"
            android:tag="2"
            app:layout_constraintBottom_toBottomOf="@+id/rock"
            app:layout_constraintEnd_toStartOf="@+id/scissors"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/rock"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/paper" />

        <ImageButton
            android:id="@+id/scissors"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:backgroundTint="#E3C33A"
            android:contentDescription="@string/scissors"
            android:onClick="rpsButton"
            android:scaleType="fitCenter"
            android:tag="3"
            app:layout_constraintBottom_toBottomOf="@+id/paper"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/paper"
            app:srcCompat="@drawable/scissors" />

        <TextView
            android:id="@+id/winners"
            android:layout_width="338dp"
            android:layout_height="47dp"
            android:fontFamily="@font/acme"

            android:textAlignment="center"

            android:textColor="#FFFFFF"
            android:textSize="36sp"
            android:textStyle="bold|italic"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.415"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rock"
            app:layout_constraintVertical_bias="0.072" />

        <TextView
            android:id="@+id/enemyresult"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/atomic_age"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/userresult"
            app:layout_constraintTop_toBottomOf="@+id/winners" />

        <TextView
            android:id="@+id/userresult"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/acme"
            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/enemyresult"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/winners" />

        <TextView
            android:id="@+id/userresult2"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/acme"

            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/enemyresult"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userresult" />

        <TextView
            android:id="@+id/enemyresult2"
            android:layout_width="80dp"
            android:layout_height="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/acme"

            android:textAlignment="center"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/userresult2"
            app:layout_constraintTop_toBottomOf="@+id/enemyresult" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>